argocd/base/radarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.streamixs.com`)
      kind: Rule
      middlewares:
        - name: pocket-id-auth
          namespace: pocket-id
      services:
        - name: radarr
          port: 7878
  tls: {}
